[gd_scene load_steps=24 format=3 uid="uid://b54aikswnelg3"]

[ext_resource type="Texture2D" uid="uid://cgx5celc7w0wu" path="res://assets/black_screen.png" id="1_13s5r"]
[ext_resource type="Script" path="res://farm_sim.gd" id="1_jssvd"]
[ext_resource type="Texture2D" uid="uid://cdbektym4wupo" path="res://assets/white_phone_screen.png" id="2_gkqxe"]
[ext_resource type="Texture2D" uid="uid://037sqqt08jje" path="res://assets/rpg/farm.png" id="3_ncbks"]
[ext_resource type="PackedScene" uid="uid://b8j6ldreb7kcl" path="res://rpg_guy.tscn" id="3_p1kg2"]
[ext_resource type="Texture2D" uid="uid://ctrwms62r3umt" path="res://assets/rpg/farm_glow_fin.png" id="4_iankd"]
[ext_resource type="Script" path="res://weed_glow.gd" id="5_jt0yw"]
[ext_resource type="Texture2D" uid="uid://dkr76f64qfioy" path="res://assets/rpg/weed.png" id="8_pgnjp"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_56jn1"]
texture = ExtResource("3_ncbks")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
9:3/0 = 0
10:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0

[sub_resource type="TileSet" id="TileSet_xxof4"]
sources/0 = SubResource("TileSetAtlasSource_56jn1")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dyyte"]
size = Vector2(96, 1087)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ifmau"]
size = Vector2(188, 336)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_brgxm"]
size = Vector2(94, 71)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1eh1l"]
size = Vector2(857.5, 169)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gl5ae"]
size = Vector2(639, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i6i0b"]
size = Vector2(202, 945.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ll7g"]
size = Vector2(226, 188.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d4awm"]
size = Vector2(40, 135)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1lqfj"]
size = Vector2(192, 145.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1o32w"]
size = Vector2(38, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ui2sw"]
texture = ExtResource("4_iankd")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
9:3/0 = 0
10:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0

[sub_resource type="TileSet" id="TileSet_p7ae5"]
sources/0 = SubResource("TileSetAtlasSource_ui2sw")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ntim1"]
radius = 12.0
height = 26.0

[node name="farm_sim" type="Node2D"]
script = ExtResource("1_jssvd")

[node name="black_screen" type="Sprite2D" parent="."]
position = Vector2(947, 537)
scale = Vector2(1.04688, 1.06296)
texture = ExtResource("1_13s5r")
metadata/_edit_lock_ = true

[node name="white_phone_screen" type="Sprite2D" parent="."]
position = Vector2(960, 540)
rotation = 1.5708
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_gkqxe")
metadata/_edit_lock_ = true

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(3, 3)
tile_set = SubResource("TileSet_xxof4")
format = 2
layer_0/tile_data = PackedInt32Array(11, 786432, 2, 12, 786432, 2, 13, 786432, 2, 14, 786432, 2, 15, 786432, 2, 16, 786432, 2, 17, 786432, 2, 18, 786432, 2, 19, 786432, 2, 20, 786432, 2, 21, 786432, 2, 22, 786432, 2, 23, 786432, 2, 24, 786432, 2, 25, 786432, 2, 26, 786432, 2, 27, 786432, 2, 28, 786432, 2, 65564, 786432, 2, 131100, 786432, 2, 196636, 786432, 2, 458780, 786432, 2, 393244, 786432, 2, 327708, 786432, 2, 262172, 786432, 2, 524316, 786432, 2, 589852, 786432, 2, 655388, 786432, 2, 720924, 786432, 2, 786460, 786432, 2, 851996, 786432, 2, 917532, 786432, 2, 983068, 786432, 2, 1048604, 786432, 2, 1114140, 786432, 2, 1179676, 786432, 2, 1245212, 786432, 2, 1310748, 786432, 2, 1376284, 786432, 2, 1441820, 786432, 2, 1441819, 786432, 2, 1441818, 786432, 2, 1441817, 786432, 2, 1441816, 786432, 2, 1441815, 786432, 2, 1441814, 786432, 2, 1441813, 786432, 2, 1441812, 786432, 2, 1441811, 786432, 2, 1441810, 786432, 2, 1441809, 786432, 2, 1441808, 786432, 2, 1441807, 786432, 2, 1441806, 786432, 2, 1441805, 786432, 2, 1441804, 786432, 2, 1441803, 786432, 2, 1376267, 786432, 2, 1310731, 786432, 2, 1245195, 786432, 2, 1179659, 786432, 2, 1114123, 786432, 2, 1048587, 786432, 2, 720907, 786432, 2, 655371, 786432, 2, 589835, 786432, 2, 524299, 786432, 2, 458763, 786432, 2, 393227, 786432, 2, 327691, 786432, 2, 262155, 786432, 2, 196619, 786432, 2, 131083, 786432, 2, 65547, 786432, 2, 65548, 786432, 2, 65549, 786432, 2, 65550, 786432, 2, 65551, 786432, 2, 65552, 786432, 2, 65553, 786432, 2, 65554, 786432, 2, 65555, 786432, 2, 65556, 786432, 2, 65557, 786432, 2, 65558, 786432, 2, 65559, 786432, 2, 65560, 786432, 2, 65561, 786432, 2, 65562, 786432, 2, 65563, 786432, 2, 131099, 786432, 2, 131098, 786432, 2, 131097, 786432, 2, 131096, 786432, 2, 131095, 786432, 2, 131094, 786432, 2, 131093, 786432, 2, 131092, 786432, 2, 131091, 786432, 2, 131090, 786432, 2, 131086, 786432, 2, 131085, 786432, 2, 131084, 786432, 2, 196620, 786432, 2, 196621, 786432, 2, 262157, 786432, 2, 262156, 786432, 2, 327692, 786432, 2, 262163, 65536, 2, 196627, 786432, 2, 196628, 786432, 2, 196629, 786432, 2, 196630, 786432, 2, 262164, 65536, 2, 458767, 65536, 2, 458766, 65536, 2, 458771, 131072, 2, 262165, 393216, 0, 196631, 786432, 2, 262167, 393216, 0, 196632, 786432, 2, 196633, 786432, 2, 262169, 393216, 0, 262170, 262144, 1, 262171, 786432, 2, 196635, 786432, 2, 196634, 786432, 2, 262166, 393216, 0, 262168, 393216, 0, 327707, 786432, 2, 393243, 786432, 2, 458779, 786432, 2, 458770, 65536, 2, 458769, 65536, 2, 458768, 65536, 2, 327693, 786432, 2, 393228, 786432, 2, 458764, 786432, 2, 458765, 196608, 1, 393229, 786432, 2, 524301, 131072, 1, 524300, 786432, 2, 589836, 786432, 2, 655372, 786432, 2, 1048588, 786432, 2, 1114124, 786432, 2, 1179660, 786432, 2, 1245196, 786432, 2, 1310732, 786432, 2, 1376268, 786432, 2, 1376269, 786432, 2, 1376270, 786432, 2, 1376271, 786432, 2, 1376272, 786432, 2, 1376273, 786432, 2, 1376274, 786432, 2, 1376275, 786432, 2, 1376276, 786432, 2, 1376277, 786432, 2, 1376278, 786432, 2, 1376279, 786432, 2, 1376280, 786432, 2, 1376281, 786432, 2, 1376282, 786432, 2, 1376283, 786432, 2, 1310747, 786432, 2, 1245211, 786432, 2, 1245210, 393216, 0, 1245209, 393216, 0, 1245208, 393216, 0, 1245207, 393216, 0, 1245206, 393216, 0, 1245205, 393216, 0, 1245204, 393216, 0, 1245203, 393216, 0, 1245202, 393216, 0, 1245201, 393216, 0, 1245200, 393216, 0, 1245199, 393216, 0, 1179663, 65536, 2, 1114127, 65536, 1, 1048591, 65536, 0, 1048592, 131072, 0, 1048593, 393216, 0, 1114129, 393216, 0, 1114128, 131072, 1, 1048590, 0, 0, 1114126, 0, 1, 1114125, 393216, 0, 1179661, 393216, 0, 1245197, 393216, 0, 1245198, 393216, 0, 1310734, 65536, 0, 1310733, 196608, 2, 1179662, 0, 2, 1310735, 65536, 0, 1310736, 65536, 0, 1310737, 65536, 0, 1310738, 65536, 0, 1310739, 65536, 0, 1310740, 65536, 0, 1310741, 65536, 0, 1310742, 65536, 0, 1310743, 65536, 0, 1310744, 65536, 0, 1310745, 65536, 0, 1310746, 262144, 2, 1179674, 393216, 0, 1179675, 786432, 2, 1114139, 786432, 2, 1114138, 393216, 0, 1114137, 393216, 0, 1114136, 393216, 0, 1114135, 393216, 0, 1114134, 393216, 0, 1114133, 393216, 0, 1179669, 393216, 0, 1179668, 393216, 0, 1179667, 393216, 0, 1179666, 393216, 0, 1179665, 393216, 0, 1179664, 131072, 2, 1179670, 393216, 0, 1179671, 393216, 0, 1179672, 393216, 0, 1179673, 393216, 0, 1048602, 393216, 0, 1048603, 786432, 2, 1048601, 393216, 0, 983062, 393216, 0, 983061, 393216, 0, 1048599, 393216, 0, 1048600, 393216, 0, 1048598, 393216, 0, 1048597, 393216, 0, 1048596, 393216, 0, 1048595, 393216, 0, 1114131, 393216, 0, 1114132, 393216, 0, 1114130, 393216, 0, 983056, 393216, 0, 1048589, 393216, 0, 524302, 393216, 0, 524309, 393216, 0, 524310, 393216, 0, 524311, 393216, 0, 524312, 393216, 0, 524313, 393216, 0, 589849, 393216, 0, 589850, 0, 1, 524314, 0, 1, 524315, 786432, 2, 524308, 393216, 0, 524307, 393216, 0, 524306, 393216, 0, 524305, 393216, 0, 524304, 393216, 0, 524303, 393216, 0, 589842, 393216, 0, 589843, 393216, 0, 589844, 393216, 0, 589845, 393216, 0, 589846, 393216, 0, 589847, 393216, 0, 589848, 393216, 0, 589851, 786432, 2, 655387, 786432, 2, 655386, 0, 1, 655385, 65536, 0, 655384, 65536, 0, 655383, 65536, 0, 655382, 65536, 0, 655381, 65536, 0, 655380, 0, 0, 655379, 393216, 0, 655378, 393216, 0, 720914, 393216, 0, 720915, 393216, 0, 720916, 0, 1, 720917, 65536, 1, 720918, 65536, 1, 720919, 65536, 1, 720923, 786432, 2, 786459, 786432, 2, 786454, 65536, 1, 786453, 65536, 1, 786452, 0, 1, 786451, 393216, 0, 786450, 393216, 0, 917520, 393216, 0, 917521, 393216, 0, 917522, 393216, 0, 983058, 393216, 0, 1048594, 393216, 0, 983057, 393216, 0, 851986, 327680, 0, 851987, 393216, 0, 851988, 0, 1, 851989, 65536, 1, 851990, 65536, 1, 851995, 786432, 2, 917531, 786432, 2, 983067, 786432, 2, 917526, 65536, 2, 917525, 65536, 2, 917524, 0, 2, 917523, 393216, 0, 983059, 393216, 0, 983060, 393216, 0, 196622, 786432, 2, 262158, 65536, 1, 327694, 65536, 1, 393230, 65536, 1, 131087, 786432, 2, 196623, 786432, 2, 262159, 65536, 1, 327695, 65536, 1, 393231, 65536, 1, 131088, 786432, 2, 196624, 786432, 2, 262160, 65536, 1, 327696, 65536, 1, 393232, 65536, 1, 131089, 786432, 2, 196625, 65536, 0, 262161, 65536, 1, 327697, 65536, 1, 393233, 65536, 1, 196626, 786432, 2, 262162, 65536, 1, 327698, 65536, 1, 393234, 65536, 1, 327699, 131072, 1, 393235, 131072, 1, 786455, 65536, 1, 851991, 65536, 1, 917527, 65536, 2, 983063, 393216, 0, 720920, 65536, 1, 786456, 65536, 1, 851992, 65536, 1, 917528, 65536, 2, 983064, 393216, 0, 720921, 65536, 1, 786457, 65536, 1, 851993, 65536, 1, 917529, 65536, 2, 983065, 393216, 0, 720922, 786432, 2, 786458, 131072, 1, 851994, 786432, 2, 917530, 131072, 2, 983066, 393216, 0, 720908, 786432, 2, 786443, 786432, 2, 786444, 786432, 2, 851980, 786432, 2, 851979, 786432, 2, 917515, 786432, 2, 917516, 786432, 2, 983052, 786432, 2, 983051, 786432, 2, 983053, 393216, 0, 983054, 393216, 0, 983055, 393216, 0, 917519, 393216, 0, 917518, 393216, 0, 917517, 393216, 0, 851981, 393216, 0, 851982, 393216, 0, 851983, 393216, 0, 851984, 393216, 0, 851985, 393216, 0, 786449, 393216, 0, 720913, 393216, 0, 655377, 393216, 0, 589841, 393216, 0, 589840, 393216, 0, 655376, 131072, 0, 720912, 131072, 1, 786448, 131072, 2, 786447, 65536, 2, 720911, 65536, 1, 720910, 0, 1, 720909, 131072, 1, 786445, 393216, 0, 786446, 0, 2, 655374, 0, 0, 655375, 65536, 0, 589837, 131072, 1, 655373, 131072, 1, 327700, 393216, 0, 393236, 393216, 0, 458772, 393216, 0, 327701, 393216, 0, 393237, 393216, 0, 458773, 393216, 0, 327702, 393216, 0, 393238, 393216, 0, 458774, 393216, 0, 327703, 393216, 0, 393239, 393216, 0, 458775, 393216, 0, 327704, 393216, 0, 393240, 393216, 0, 458776, 393216, 0, 327705, 393216, 0, 393241, 393216, 0, 458777, 393216, 0, 327706, 262144, 1, 393242, 0, 1, 458778, 0, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(574, 534.5)
shape = SubResource("RectangleShape2D_dyyte")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(827, 170)
shape = SubResource("RectangleShape2D_ifmau")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(674, 156)
shape = SubResource("RectangleShape2D_brgxm")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(970.25, 1045)
shape = SubResource("RectangleShape2D_1eh1l")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1128, 138)
shape = SubResource("RectangleShape2D_gl5ae")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1396, 575.25)
shape = SubResource("RectangleShape2D_i6i0b")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1127, 576.75)
shape = SubResource("RectangleShape2D_8ll7g")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1270, 604.5)
shape = SubResource("RectangleShape2D_d4awm")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1105, 839.25)
shape = SubResource("RectangleShape2D_1lqfj")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(743, 559)
shape = SubResource("RectangleShape2D_1o32w")

[node name="TileMap2" type="TileMap" parent="."]
unique_name_in_owner = true
scale = Vector2(3, 3)
tile_set = SubResource("TileSet_xxof4")
format = 2
layer_0/tile_data = PackedInt32Array(11, 589824, 3, 12, 655360, 3, 13, 589824, 3, 14, 655360, 3, 15, 589824, 3, 16, 655360, 3, 17, 589824, 3, 18, 655360, 3, 19, 589824, 3, 20, 655360, 3, 21, 589824, 3, 22, 655360, 3, 23, 589824, 3, 24, 655360, 3, 25, 589824, 3, 26, 655360, 3, 27, 589824, 3, 28, 655360, 3, 65564, 655360, 4, 131100, 655360, 3, 196636, 655360, 4, 524316, 655360, 3, 589852, 655360, 4, 655388, 655360, 3, 720924, 655360, 4, 786460, 655360, 3, 851996, 655360, 4, 917532, 655360, 3, 983068, 655360, 4, 1048604, 655360, 3, 1114140, 655360, 4, 1179676, 655360, 3, 1245212, 655360, 4, 1310748, 655360, 3, 1376284, 655360, 4, 1441820, 655360, 3, 1441819, 589824, 3, 1441818, 655360, 3, 1441817, 589824, 3, 1441816, 655360, 3, 1441815, 589824, 3, 1441814, 655360, 3, 1441813, 589824, 3, 1441812, 655360, 3, 1441811, 589824, 3, 1441810, 655360, 3, 1441809, 589824, 3, 1441808, 655360, 3, 1441807, 589824, 3, 1441806, 655360, 3, 1441805, 589824, 3, 1441804, 655360, 3, 1441803, 589824, 3, 1376267, 589824, 4, 1310731, 589824, 3, 1245195, 589824, 4, 1179659, 589824, 3, 1114123, 589824, 4, 1048587, 589824, 3, 196619, 589824, 4, 131083, 589824, 3, 65547, 589824, 4, 65548, 655360, 4, 65549, 589824, 4, 65550, 655360, 4, 65551, 589824, 4, 65552, 655360, 4, 65553, 589824, 4, 65554, 655360, 4, 65555, 589824, 4, 65556, 655360, 4, 65557, 589824, 4, 65558, 655360, 4, 65559, 589824, 4, 65560, 655360, 4, 65561, 589824, 4, 65562, 655360, 4, 65563, 589824, 4, 131099, 589824, 3, 131098, 655360, 3, 131097, 589824, 3, 131096, 655360, 3, 131095, 589824, 3, 131094, 655360, 3, 131093, 589824, 3, 131092, 655360, 3, 131091, 589824, 3, 131090, 0, 8, 131086, 655360, 3, 131085, 589824, 3, 131084, 655360, 3, 196620, 655360, 4, 196621, 589824, 4, 262157, 720896, 0, 262156, 655360, 3, 327692, 655360, 4, 262163, 327680, 2, 196627, 589824, 4, 196628, 655360, 4, 196629, 589824, 4, 196630, 655360, 4, 262164, 65536, 2, 458767, 65536, 2, 458766, 65536, 2, 458771, 131072, 2, 458772, 524288, 8, 196631, 589824, 4, 196632, 655360, 4, 196633, 589824, 4, 196635, 589824, 4, 196634, 655360, 4, 458770, 65536, 2, 458769, 65536, 2, 458768, 65536, 2, 327693, 720896, 0, 393228, 655360, 3, 458764, 655360, 4, 458765, 327680, 2, 393229, 720896, 0, 524301, 131072, 1, 589837, 131072, 1, 524300, 655360, 3, 589836, 655360, 4, 655373, 131072, 1, 655372, 655360, 3, 720908, 655360, 4, 786444, 655360, 3, 851980, 655360, 4, 917516, 655360, 3, 983052, 655360, 4, 1048588, 655360, 3, 1114124, 655360, 4, 1179660, 655360, 3, 1245196, 655360, 4, 1310732, 655360, 3, 1376268, 655360, 4, 1376269, 589824, 4, 1376270, 655360, 4, 1376271, 589824, 4, 1376272, 655360, 4, 1376273, 589824, 4, 1376274, 655360, 4, 1376275, 589824, 4, 1376276, 655360, 4, 1376277, 589824, 4, 1376278, 655360, 4, 1376279, 589824, 4, 1376280, 655360, 4, 1376281, 589824, 4, 1376282, 655360, 4, 1376283, 589824, 4, 1310747, 589824, 3, 1245211, 589824, 4, 1245210, 0, 1, 1245209, 393216, 0, 1245208, 393216, 0, 1245207, 393216, 0, 1245206, 393216, 0, 1245205, 393216, 0, 1245204, 393216, 0, 1245203, 393216, 0, 1245202, 393216, 0, 1245201, 393216, 0, 1245200, 393216, 0, 1245199, 393216, 0, 1179663, 65536, 2, 1114127, 720896, 0, 1048591, 65536, 0, 1048592, 131072, 0, 1048593, 393216, 0, 1114129, 393216, 0, 1114128, 131072, 1, 1048590, 0, 0, 1114126, 0, 1, 1114125, 131072, 1, 1179661, 131072, 1, 1245197, 131072, 1, 1245198, 393216, 0, 1310734, 655360, 3, 1310733, 589824, 3, 1179662, 0, 2, 1310735, 589824, 3, 1310736, 655360, 3, 1310737, 589824, 3, 1310738, 655360, 3, 1310739, 589824, 3, 1310740, 655360, 3, 1310741, 589824, 3, 1310742, 655360, 3, 1310743, 589824, 3, 1310744, 655360, 3, 1310745, 589824, 3, 1310746, 655360, 3, 1179674, 0, 1, 1179675, 589824, 3, 1114139, 589824, 4, 1114138, 0, 1, 1114137, 393216, 0, 1114136, 655360, 9, 1114135, 655360, 9, 1114134, 655360, 9, 1114133, 655360, 9, 1179669, 655360, 9, 1179668, 393216, 0, 1179667, 393216, 0, 1179666, 393216, 0, 1179665, 393216, 0, 1179664, 131072, 2, 1179670, 655360, 9, 1179671, 655360, 9, 1179672, 655360, 9, 1179673, 393216, 0, 1048602, 0, 1, 1048603, 589824, 3, 1048601, 393216, 0, 983062, 393216, 0, 983061, 393216, 0, 1048599, 655360, 9, 1048600, 655360, 9, 1048598, 655360, 9, 1048597, 655360, 9, 1048596, 393216, 0, 1048595, 393216, 0, 1114131, 393216, 0, 1114132, 393216, 0, 1114130, 393216, 0, 983056, 393216, 0, 1048589, 131072, 1, 589838, 393216, 0, 524302, 393216, 0, 524309, 393216, 0, 524310, 393216, 0, 524311, 393216, 0, 524312, 393216, 0, 524313, 393216, 0, 589849, 393216, 0, 589850, 0, 1, 524314, 0, 1, 524315, 589824, 3, 524308, 393216, 0, 524307, 393216, 0, 524304, 393216, 0, 524303, 393216, 0, 589839, 393216, 0, 589843, 393216, 0, 589844, 393216, 0, 589845, 393216, 0, 589846, 327680, 3, 589847, 393216, 3, 589848, 458752, 3, 589851, 589824, 4, 655387, 589824, 3, 655386, 262144, 2, 655385, 524288, 4, 655384, 458752, 4, 655383, 393216, 4, 655382, 327680, 4, 655381, 262144, 4, 655380, 0, 0, 655379, 393216, 0, 655375, 65536, 0, 655374, 0, 0, 720915, 393216, 0, 720916, 0, 1, 720917, 262144, 5, 720918, 327680, 5, 720919, 393216, 5, 720923, 589824, 4, 786459, 589824, 3, 786454, 327680, 6, 786453, 262144, 6, 786452, 0, 1, 786451, 393216, 0, 851985, 458752, 0, 851984, 393216, 0, 917520, 393216, 0, 917521, 393216, 0, 917522, 393216, 0, 983058, 393216, 0, 1048594, 393216, 0, 983057, 393216, 0, 851986, 327680, 0, 851987, 393216, 0, 851988, 0, 1, 851989, 262144, 7, 851990, 327680, 7, 851995, 589824, 4, 917531, 589824, 3, 983067, 589824, 4, 917526, 65536, 2, 917525, 65536, 2, 917524, 0, 2, 917523, 393216, 0, 983059, 393216, 0, 983060, 393216, 0, 196622, 655360, 4, 262158, 720896, 0, 327694, 720896, 0, 393230, 720896, 0, 131087, 655360, 0, 196623, 0, 4, 262159, 0, 5, 327695, 0, 6, 393231, 0, 7, 131088, 65536, 3, 196624, 65536, 4, 262160, 65536, 5, 327696, 65536, 6, 393232, 65536, 7, 131089, 131072, 3, 196625, 131072, 4, 262161, 131072, 5, 327697, 131072, 6, 393233, 131072, 7, 196626, 196608, 4, 262162, 196608, 5, 327698, 196608, 6, 393234, 196608, 7, 327699, 131072, 1, 393235, 131072, 1, 327700, 524288, 8, 393236, 524288, 8, 786455, 393216, 6, 851991, 393216, 7, 917527, 65536, 2, 983063, 393216, 0, 720920, 458752, 5, 786456, 458752, 6, 851992, 458752, 7, 917528, 65536, 2, 983064, 393216, 0, 720921, 524288, 5, 786457, 524288, 6, 851993, 524288, 7, 917529, 65536, 2, 983065, 393216, 0, 720922, 655360, 0, 786458, 786432, 2, 851994, 655360, 0, 917530, 262144, 1, 983066, 0, 1, 262165, 65536, 2, 262166, 65536, 2, 262167, 65536, 2, 262168, 65536, 2, 262169, 65536, 2, 262170, 262144, 1, 262171, 589824, 3, 327707, 589824, 4, 393243, 589824, 3, 458779, 589824, 4, 262172, 655360, 3, 327708, 655360, 4, 393244, 655360, 3, 458780, 655360, 4, 1507355, 589824, 4, 1507356, 655360, 4, 1507353, 589824, 4, 1507354, 655360, 4, 1507351, 589824, 4, 1507352, 655360, 4, 1507349, 589824, 4, 1507350, 655360, 4, 1507347, 589824, 4, 1507348, 655360, 4, 1507345, 589824, 4, 1507346, 655360, 4, 1507343, 589824, 4, 1507344, 655360, 4, 1507341, 589824, 4, 1507342, 655360, 4, 1507339, 589824, 4, 1507340, 655360, 4, 262155, 589824, 3, 327691, 589824, 4, 393227, 589824, 3, 458763, 589824, 4, 524299, 589824, 3, 589835, 589824, 4, 655371, 589824, 3, 720907, 589824, 4, 786443, 589824, 3, 851979, 589824, 4, 917515, 589824, 3, 983051, 589824, 4, 720911, 655360, 0, 786445, 131072, 1, 851981, 131072, 1, 917517, 131072, 1, 983053, 131072, 1, 327701, 524288, 8, 393237, 524288, 8, 458773, 524288, 8, 327702, 524288, 8, 393238, 524288, 8, 458774, 524288, 8, 327703, 524288, 8, 393239, 589824, 8, 458775, 524288, 8, 327704, 524288, 8, 393240, 524288, 8, 458776, 524288, 8, 327705, 524288, 8, 393241, 524288, 8, 458777, 524288, 8, 327706, 0, 1)
metadata/_edit_lock_ = true

[node name="TileMap" type="TileMap" parent="TileMap2"]
tile_set = SubResource("TileSet_p7ae5")
format = 2
layer_0/tile_data = PackedInt32Array(393239, 589824, 8)
script = ExtResource("5_jt0yw")

[node name="black_screen_two" type="Sprite2D" parent="."]
position = Vector2(1017.5, 493.5)
scale = Vector2(2.35469, 3.18796)
texture = ExtResource("1_13s5r")

[node name="rpg_guy" parent="." instance=ExtResource("3_p1kg2")]
position = Vector2(775, 806)

[node name="Camera2D" type="Camera2D" parent="rpg_guy"]
limit_left = 555
limit_top = 0
limit_right = 1920
limit_bottom = 1080

[node name="weed_detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="weed_detection"]
position = Vector2(1128, 314)
shape = SubResource("CapsuleShape2D_ntim1")

[node name="weed" type="Sprite2D" parent="."]
position = Vector2(1126, 234)
scale = Vector2(0.1, 0.1)
texture = ExtResource("8_pgnjp")

[connection signal="body_entered" from="weed_detection" to="." method="_on_weed_detection_body_entered"]
